keycloak_postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
spec:
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      serviceAccountName: postgres-service-account
      securityContext:
        runAsUser: 999
        fsGroup: 999
      containers:
      - name: postgres
        image: postgres:13-alpine
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: keycloak-postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: keycloak-postgres-storage
        persistentVolumeClaim:
          claimName: data
