keycloak_postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
spec:
  selector:
    app: keycloak-postgres
  ports:
  - name: postgres
    port: 5432
