keycloak_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"

spec:
  tls:
    - hosts:
      - keycloak.lafia.io
      secretName: keycloak-tls
  rules:
  - host: "keycloak.lafia.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lafia-keycloak
            port:
              number: 8080
